5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1756_1183.log
== TEST (2019-05-27 15:49:07) 
-- CODE:
from numpy import*

v = erray(eval(input("Elementos: ")))
i = 0 
t = []

while(i < size(v)):
	if(v[i] => 0):
		t.append(v[i])
	i = i + 1
	
print(srt(t).replace.(",",""))
-- ERROR:
File "XXXX", line 8
    if(v[i] => 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:49:22) 
-- CODE:
from numpy import*

v = erray(eval(input("Elementos: ")))
i = 0 
t = []

while(i < size(v)):
	if(v[i] >= 0):
		t.append(v[i])
	i = i + 1
	
print(srt(t).replace.(",",""))
-- ERROR:
File "XXXX", line 12
    print(srt(t).replace.(",",""))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:49:56) 
-- CODE:
from numpy import*

v = erray(eval(input("Elementos: ")))
i = 0 
t = []

while(i < size(v)):
	if(v[i] >= 0):
		t.append(v[i])
	i = i + 1
	
print(srt(t).replace.(',',''))
-- ERROR:
File "XXXX", line 12
    print(srt(t).replace.(',',''))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:50:05) 
-- CODE:
from numpy import*

v = erray(eval(input("Elementos: ")))
i = 0 
t = []

while(i < size(v)):
	if(v[i] >= 0):
		t.append(v[i])
	i = i + 1
	
print(srt(t).replace(',',''))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:50:13) 
-- CODE:
from numpy import*

v = array(eval(input("Elementos: ")))
i = 0 
t = []

while(i < size(v)):
	if(v[i] >= 0):
		t.append(v[i])
	i = i + 1
	
print(srt(t).replace(',',''))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:50:35) 
-- CODE:
from numpy import*

v = array(eval(input("Elementos: ")))
i = 0 
t = []

while(i < size(v)):
	if(v[i] >= 0):
		t.append(v[i])
	i = i + 1
	
print(srt(t).replace(',',''))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:51:40) 
-- CODE:
from numpy import*

v = array(eval(input("Elementos: ")))
i = 0 
t = []

while(i < size(v)):
	if(v[i] >= 0):
		t.append(v[i])
	i = i + 1
	
print(str(t).replace(',',''))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:51:45) 
-- CODE:
from numpy import*

v = array(eval(input("Elementos: ")))
i = 0 
t = []

while(i < size(v)):
	if(v[i] >= 0):
		t.append(v[i])
	i = i + 1
	
print(str(t).replace(',',''))
-- EXECUTION TIME:
0.404622
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
